cabal-version: >= 1.10
build-type:    Simple

name:          hails-templates
version:       0.0.3.3
author:        Ivan Perez
maintainer:    ivan.perez@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
category:      Development
synopsis:      Haskell on Gtk rails - Template file generator

data-files:
  templates/*.hs
  templates/Controller/*.hs
  templates/Model/*.hs
  templates/Model/ProtectedModel/*.hs
  templates/Model/ReactiveModel/*.hs
  templates/Paths/*.hs
  templates/View/*.hs

source-repository head
 type: git
 location: git://github.com/keera-studios/keera-hails
 subdir: keera-hails-templates

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

executable hails

  main-is: Main.hs

  Other-Modules:
    AppDataBasic
    AppDataFull
    HailsArgs

  build-depends:
      base >= 4
    , bytestring
    , cmdargs
    , data-default
    , directory
    , filepath
    , IfElse

  default-language: Haskell2010

  hs-source-dirs: src/

  ghc-options: -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
