-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails
version:       0.7.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://www.keera.co.uk/blog/community/
license:       BSD3
license-file:  LICENSE
copyright:     (C) 2013 Keera Studios Ltd
category:      Development
synopsis:      Create interactive applications quickly from starting templates.
description:
  Keera Hails is a rapid application development for interactive Haskell
  applications.
  .
  This package provides a command line program that generates a starting point
  for your Haskell applications.

data-files:
  templates/*.hs
  templates/Controller/*.hs
  templates/Model/*.hs
  templates/Model/ProtectedModel/*.hs
  templates/Model/ReactiveModel/*.hs
  templates/Paths/*.hs
  templates/View/*.hs

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

executable hails

  main-is:
    Main.hs

  other-modules:
    AppDataBasic
    AppDataFull
    HailsArgs

  build-depends:
      base         >= 4 && < 5
    , bytestring
    , cmdargs
    , data-default
    , directory
    , filepath
    , IfElse

  default-language:
    Haskell2010

  hs-source-dirs:
    src/

  ghc-options:
    -Wall -fno-warn-unused-do-bind -O2


test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base       >= 4   && < 5
      , hlint      >= 1.7

-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  default-language:
    Haskell2010

  hs-source-dirs:
    tests

  ghc-options:
    -Wall

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base         >= 4 && < 5
      , directory
      , filepath
      , process
      , regex-posix
