-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >= 1.10
build-type:    Simple

name:          ElementaryGtkProgram
version:       0.6.0
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      -
license:       BSD3
license-file:  LICENSE
category:      Text
stability:     Provisional
synopsis:      A very simple Gtk program using protected reactive objects

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

executable ElementaryGtkProgram

  Main-is: Main.hs

  build-depends:
      base >= 4.0
    , directory
    , gd
    , glade
    , gtk

    , combined-environment
    , generic-view
    , protected-objects
    , haskell-prmvc-helpers

  default-language: Haskell2010
  hs-source-dirs: src/

  if os(windows)
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2 -optl-mwindows
  else
   ghc-options: -threaded -Wall -fno-warn-unused-do-bind -O2

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
