-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >=1.10
build-type:    Simple

name:          keera-hails-demos-gtk-dunai
version:       0.7.0
author:        Sasha Pavlenko
maintainer:    support@keera.co.uk
homepage:      http://github.com/keera-studios/keera-hails
license:       BSD3
license-file:  LICENSE
category:      Graphics
synopsis:      A demo showing how to connect hails and dunai

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: demos/keera-hails-demos-gtk-dunai

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

executable keera-hails-demos-gtk-dunai
  main-is:             HelloWorld.hs
  build-depends:
      base >=4.6 && <5
    , dunai
    , gtk

    , keera-hails-reactivevalues
    , keera-hails-reactive-gtk

  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
