cabal-version: >= 1.10
build-type:    Simple

name:          keera-hails-demos-small
version:       0.1.0
license:       AllRightsReserved
license-file:  LICENSE

executable keera-hails-demos-small
  main-is: Main.hs
  build-depends:
      base                          >= 4.11
    , file-embed
    , ghcjs-dom                     >= 0.9
    , ghcjs-base
    , keera-callbacks
    , keera-hails-reactivevalues
    , keera-hails-reactive-cbmvar
    , keera-hails-reactive-htmldom

  -- We need no-missing-home-modules because cabal and ghcjs do not see that
  -- the modules are listed in other-modules.
  ghc-options:    -threaded -Wall -Wno-missing-home-modules

  -- We use dedupe to make code smaller.
  ghcjs-options: -dedupe
  hs-source-dirs: src
  default-language: Haskell2010
