-- Copyright   : (C) Keera Studios Ltd, 2013
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk
--
cabal-version: >=1.10
build-type:    Simple

name:          keera-hails-demos-soundplay
author:        Ivan Perez
maintainer:    support@keera.co.uk
homepage:      http://github.com/keera-studios/keera-hails
license:       BSD3
license-file:  LICENSE
category:      Sound
version:       0.7.0
synopsis:      A simple demo to play sounds and control volume.

data-files: baby.wav

source-repository head
  type: git
  location: git://github.com/keera-studios/keera-hails
  subdir: keera-hails-demos-soundplay

-- You can disable the hlint test suite with -f-test-hlint
flag test-hlint
  default: False
  manual:  True

-- You can disable the haddock coverage test suite with -f-test-doc-coverage
flag test-doc-coverage
  default: False
  manual:  True

executable keera-hails-demos-soundplay
  main-is:             Main.hs
  other-modules:       Paths_keera_hails_demos_soundplay
  build-depends:
      base >=4.6 && <5
    , gtk
    , SDL
    , SDL-mixer
    , keera-hails-reactive-gtk
    , keera-hails-reactivevalues

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -threaded

test-suite hlint

  type:
    exitcode-stdio-1.0

  main-is:
    HLintMain.hs

  hs-source-dirs:
    tests

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
        base                 >= 4   && < 5
      , hlint                >= 1.7

  default-language:
    Haskell2010


-- Verify that the code is thoroughly documented
test-suite haddock-coverage

  type:
    exitcode-stdio-1.0

  main-is:
    HaddockCoverage.hs

  ghc-options:
    -Wall

  hs-source-dirs:
    tests

  if !flag(test-doc-coverage)
    buildable: False
  else
    build-depends:
        base                 >= 4        && < 5
      , directory
      , filepath
      , process
      , regex-posix

  default-language:
    Haskell2010
