-- Copyright   : (C) Keera Studios Ltd, 2020
-- License     : All Rights Reserved
-- Maintainer  : support@keera.co.uk

cabal-version: >=1.10
build-type:    Simple

name:          keera-hails-gtk-app
version:       0.5.0
author:        Myro Pavlenko
maintainer:    support@keera.co.uk
homepage:      https://github.com/keera-studios/keera-hails
license:       BSD3
license-file:  LICENSE
category:      Graphics
synopsis:      A demo built using keera-hails

extra-source-files:
  ChangeLog.md

data-files:
  data/Interface.glade

executable keera-hails-gtk-app

  main-is:
    Main.hs

  other-modules:
    CombinedEnvironment
    Controller
    Controller.Conditions
    Model.Model
    Model.ProtectedModel
    Model.ProtectedModel.ProtectedFields
    Model.ProtectedModel.ProtectedModelInternals
    Model.ReactiveModel
    Model.ReactiveModel.ModelEvents
    Model.ReactiveModel.ReactiveFields
    Model.ReactiveModel.ReactiveModelInternals
    Paths
    Paths.CustomPaths
    View
    View.Objects

  build-depends:
      base >=4.12 && <4.13
    , gtk
    , keera-hails-mvc-environment-gtk
    , keera-hails-mvc-model-protectedmodel
    , keera-hails-mvc-view
    , keera-hails-mvc-view-gtk

  default-language:
    Haskell2010

  hs-source-dirs:
    src
